# chat-with-docs

./: .dockerignore  .env.example  .gitignore  TODO.txt  generate_embeddings.py  generate_image_graph.py  langgraph.json  langgraph_run.py  main.py  main_rag.py  pyproject.toml  readme.md  requirements.txt
docker/: Dockerfile  docker-compose-mogo.yml  docker-compose-prod.yml
src/: extencions.py
src/_oldfiles/: main.py
src/api/: chat.py  embedding.py  uploads.py
src/config/: db_config.py  db_motor.py  settings.py
src/db/: __creating_embeddings.py  chromadb.py  creating_embeddings.py  embeddings.py
src/graph/: rag_graph.py
src/graph/node/: nodes.py
src/loaders/: pdf_loader.py
src/model/: __init__.py  models.py
src/model/conector/: __init__.py  database_conector_postgres.py
src/models/: files.py
src/prompts/: templates.py
src/schema/: response.py  schemas.py
src/utils/: check_files.py  search_manager.py  text_splitters.py  tools.py
